<?xml version="1.0" encoding="utf-8"?>
<ListView xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:divider="@color/blue_grey_500"
          android:dividerHeight="1dp"
          android:id="@+id/list">
</ListView>
